--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -21,10 +21,10 @@ env = XCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
-    kb_variant =
+    kb_layout = us,us
+    kb_variant = ,intl
     kb_model =
-    kb_options = ctrl:nocaps # troca Ctrl para Caps Lock
+    kb_options = ctrl:nocaps, # troca Ctrl para Caps Lock
     kb_rules =
 
     follow_mouse = 1
@@ -116,6 +116,7 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod, SPACE, exec, hyprctl switchxkblayout at-translated-set-2-keyboard next
 bind = $mainMod, C, killactive, 
 bind = $mainMod SHIFT, F, exec, firefox
 #bind = $mainMod, M, exit, 
