tutorial 2 & fontes removida

--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -1,30 +1,28 @@
 #
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
+# Por favor, note que nem todas as configurações / opções estão definidas aqui.
+# Para uma lista completa, veja a wiki
 #
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
+# Veja https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+# Veja https://wiki.hyprland.org/Configuring/Keywords/ para mais
 
-# Execute your favorite apps at launch
+# Execute seus programas favoritos ao iniciar o Hyprland
 # exec-once = waybar & hyprpaper & firefox
 exec-once = kitty
 
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
-# Some default env vars.
+# Algumas variáveis de ambiente padrão
 env = XCURSOR_SIZE,24
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+# Para todas as categorias, veja https://wiki.hyprland.org/Configuring/Variables/
 input {
+    # define dois teclados us, um sem e outro com as teclas mortas (para acentos)
     kb_layout = us,us
     kb_variant = ,intl
     kb_model =
-    kb_options = ctrl:nocaps, # troca Ctrl para Caps Lock
+    kb_options = ctrl:nocaps # troca Caps Lock para Ctrl
     kb_rules =
 
     follow_mouse = 1
@@ -37,11 +35,11 @@ input {
         natural_scroll = no
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0 # -1.0 - 1.0, 0 significa sem alteraçẽs
 }
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    # Veja https://wiki.hyprland.org/Configuring/Variables/ para mais
 
     gaps_in = 2
     gaps_out = 5
@@ -53,7 +51,7 @@ general {
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    # Veja https://wiki.hyprland.org/Configuring/Variables/ para mais
 
     rounding = 5
     blur = yes
@@ -70,7 +68,7 @@ decoration {
 animations {
     enabled = yes
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+    # Algumas animações padrão, veja https://wiki.hyprland.org/Configuring/Animations/ para mais
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
@@ -83,83 +81,34 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+    # Veja https://wiki.hyprland.org/Configuring/Dwindle-Layout/ para mais
+    pseudotile = yes # interruptor mestre para pseudotiling. Ativação através do atalho mainMod + P configurado no shortcuts.conf
+    preserve_split = yes # você provavelmente quer isso
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+    # Veja https://wiki.hyprland.org/Configuring/Master-Layout/ para mais
     new_is_master = true
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    # Veja https://wiki.hyprland.org/Configuring/Variables/ para mais
     workspace_swipe = off
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
+# Exemplo de configuração por dispositivo
+# Veja https://wiki.hyprland.org/Configuring/Keywords/#executing para mais
 device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
-# Example windowrule v1
+# Exemplo windowrule v1
 # windowrule = float, ^(kitty)$
-# Example windowrule v2
+# Exemplo windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# Veja https://wiki.hyprland.org/Configuring/Window-Rules/ para mais
 
+# Carregue um arquivo (configuração por vários arquivos)
+# source = ~/.config/hypr/myColors.conf
+source = ~/.config/hypr/shortcuts.conf
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, kitty
-bind = $mainMod, SPACE, exec, hyprctl switchxkblayout at-translated-set-2-keyboard next
-bind = $mainMod, C, killactive, 
-bind = $mainMod SHIFT, F, exec, firefox
-#bind = $mainMod, M, exit, 
-#bind = $mainMod, E, exec, dolphin
-#bind = $mainMod, V, togglefloating, 
-#bind = $mainMod, R, exec, wofi --show drun
-#bind = $mainMod, P, pseudo, # dwindle
-#bind = $mainMod, J, togglesplit, # dwindle
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, J, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Scroll through existing workspaces with mainMod + scroll
-#bind = $mainMod, mouse_down, workspace, e+1
-#bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
