--- a/dotfiles/.config/hypr/shortcuts.conf
+++ b/dotfiles/.config/hypr/shortcuts.conf
@@ -45,11 +45,14 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# move/reajusta as janelas com o mainMod + LMB/RMB e arrastando
+# LMB : Left Mouse Button -> Botão Esquerdo do Mouse
+# RMB : Right Mouse Button -> Botão Direito do Mouse
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
+
 # Scroll through existing workspaces with mainMod + scroll
 #bind = $mainMod, mouse_down, workspace, e+1
 #bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
-#bindm = $mainMod, mouse:272, movewindow
-#bindm = $mainMod, mouse:273, resizewindow
 
