--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 #
-# Por favor, note que nem todas as configurações / opções estão definidas aqui.
-# Para uma lista completa, veja a wiki
+# Por favor, note que nem todas as configurações/opções estão definidas aqui.
+# Para uma lista completa, veja a wiki.
 #
 
 # Veja https://wiki.hyprland.org/Configuring/Monitors/
@@ -11,7 +11,7 @@ monitor=,preferred,auto,auto
 
 # Execute seus programas favoritos ao iniciar o Hyprland
 # exec-once = waybar & hyprpaper & firefox
-exec-once = kitty
+exec-once = kitty & hyprpaper
 
 # Algumas variáveis de ambiente padrão
 env = XCURSOR_SIZE,24
@@ -35,7 +35,7 @@ input {
         natural_scroll = no
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 significa sem alteraçẽs
+    sensitivity = 0 # -1.0 até 1.0, 0 significa sem alteraçẽs
 }
 
 general {
