Adicionado mais programas e temas ainda para ver.

--- a/dotfiles/.config/hypr/shortcuts.conf
+++ b/dotfiles/.config/hypr/shortcuts.conf
@@ -1,27 +1,43 @@
-# Veja https://wiki.hyprland.org/Configuring/Keywords/ para mais
-# Configura a tecla do Windows / Cmd para mainMod
+# documentação https://wiki.hyprland.org/Configuring/Keywords/
+
+# modificador principal
 $mainMod = SUPER
 
-# Exemplo do binds, veja https://wiki.hyprland.org/Configuring/Binds/ para mais
-bind = $mainMod, RETURN, exec, kitty # inicia o Kitty
+# variáveis
+$term = kitty
+$editor = code
+$file = dolphin
+$browser = firefox
+
+# ações das janelas/sessões
+bind = $mainMod, Q, killactive # encerra o programa em foco
+bind = ALT, F4, killactive # encerra o programa em foco
+bind = $mainMod, delete, exit # encerra o hyperland
+bind = $mainMod, W, togglefloating # alterna a janela em foco para flutuante
+bind = $mainMod, G, togglegroup # anterna a janela em foco para grupo
+bind = ALT, RETURN, fullscreen # anterna a janela em foco para tela cheia
+# bind = $mainMod, L, exec, swaylock # bloqueia a tela
+# bind = $mainMod, BACKSPACE, exec, ~/.config/hypr/scripts/logoutlaunch.sh 1 # menu de logout
+# bind = $CONTROL, ESCAPE, exec, killall waybar || waybar # reinicia waybar
+
+# atalhos dos programas
+bind = $mainMod, T, exec, $term # abre o Kitty
+bind = $mainMod, E, exec, $file # abre do Dolphin
+bind = $mainMod, C, exec, $editor # abre o VS Code
+bind = $mainMod, F, exec, $browser # abre o Firefox
+
+# executa scripts personalizados
 # usa o mainMod + Espaço para alterar o layout do teclado
 bind = $mainMod, SPACE, exec, hyprctl switchxkblayout at-translated-set-2-keyboard next
-bind = $mainMod, C, killactive, # encerra o programa
-bind = $mainMod SHIFT, F, exec, firefox # inicia o Firefox
-#bind = $mainMod, M, exit, 
-#bind = $mainMod, E, exec, dolphin
-#bind = $mainMod, V, togglefloating, 
-#bind = $mainMod, R, exec, wofi --show drun
-#bind = $mainMod, P, pseudo, # dwindle
-#bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, SPACE, exec, ~/.config/hypr/scripts/keyboardswitch.sh
 
-# Move o foco da janela com a tecla mainMod + H/J/K/L (teclas do Vim)
+# move o foco da janela com a tecla mainMod + H/J/K/L (teclas do Vim)
 bind = $mainMod, H, movefocus, l # move para esquerda
 bind = $mainMod, L, movefocus, r # move para direita
-bind = $mainMod, k, movefocus, u # move para cima
+bind = $mainMod, K, movefocus, u # move para cima
 bind = $mainMod, J, movefocus, d # move para baixo
 
-# Alterna entre as áreas de trabalho com mainMod + [0-9]
+# alterna entre as áreas de trabalho com mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -33,7 +49,20 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move a janela ativa para uma área de trabalho com mainMod + Shift + [0-9]
+# vai para a área de trabalho adjacente
+bind = $mainMod CTRL, L, workspace, r+1 # direita
+bind = $mainMod CTRL, H, workspace, r-1 # esquerda
+
+# vai para a primeira área de trabalho vazia (da esqueda para direita)
+bind = $mainMod CTRL, J, workspace, empty
+
+# altera o tamanho da janela
+binde = $mainMod SHIFT, H, resizeactive, -30 0 # direita
+binde = $mainMod SHIFT, L, resizeactive, 30 0 # esquerda
+binde = $mainMod SHIFT, J, resizeactive, 0 30 # baixo
+binde = $mainMod SHIFT, K, resizeactive, 0 -30 # cima
+
+# move a janela ativa para uma área de trabalho com mainMod + Shift + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -45,14 +74,46 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# move a janela ativa para a área de trabalho adjacente
+bind = $mainMod CTRL ALT, L, movetoworkspace, r+1 # direita
+bind = $mainMod CTRL ALT, H, movetoworkspace, r-1 # esquerda
+
+# move a janela ativa pela área de trabalho ativa
+bind = $mainMod SHIFT CTRL, H, movewindow, l # esquerda
+bind = $mainMod SHIFT CTRL, L, movewindow, r # direita
+bind = $mainMod SHIFT CTRL, K, movewindow, u # cima
+bind = $mainMod SHIFT CTRL, J, movewindow, d # baixo
+
+# vai para a próxima área de atrabalho existente com mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
+
 # move/reajusta as janelas com o mainMod + LMB/RMB e arrastando
 # LMB : Left Mouse Button -> Botão Esquerdo do Mouse
 # RMB : Right Mouse Button -> Botão Direito do Mouse
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = $mainMod, mouse:272, movewindow # LMB
+bindm = $mainMod, mouse:273, resizewindow # RMB
 
-# Scroll through existing workspaces with mainMod + scroll
-#bind = $mainMod, mouse_down, workspace, e+1
-#bind = $mainMod, mouse_up, workspace, e-1
+# área de trabalho especial (scratchpad)
+bind = $mainMod ALT, S, movetoworkspacesilent, special
+bind = $mainMod, S, togglespecialworkspace
 
+# alterna layout
+bind = $mainMod, V, togglesplit # dwindle
 
+# move a janela ativa silenciosamente
+bind = $mainMod ALT, 1, movetoworkspacesilent, 1
+bind = $mainMod ALT, 2, movetoworkspacesilent, 2
+bind = $mainMod ALT, 3, movetoworkspacesilent, 3
+bind = $mainMod ALT, 4, movetoworkspacesilent, 4
+bind = $mainMod ALT, 5, movetoworkspacesilent, 5
+bind = $mainMod ALT, 6, movetoworkspacesilent, 6
+bind = $mainMod ALT, 7, movetoworkspacesilent, 7
+bind = $mainMod ALT, 8, movetoworkspacesilent, 8
+bind = $mainMod ALT, 9, movetoworkspacesilent, 9
+bind = $mainMod ALT, 0, movetoworkspacesilent, 10
+
+# Rofi is toggled on/off if you repeat the key presses
+# bind = $mainMod, A, exec, pkill -x rofi || rofi # launch desktop applications
+# bind = $mainMod, tab, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh w # switch between desktop applications
+# bind = $mainMod, R, exec, pkill -x rofi || ~/.config/hypr/scripts/rofilaunch.sh f # browse system files
