--- a/dotfiles/.config/kitty/kitty.conf
+++ b/dotfiles/.config/kitty/kitty.conf
@@ -2,12 +2,22 @@
 
 #: Configurações Personalizadas {{{
 # Configurações da fonte
-font_family CaskaydiaCove Nerd Font
-font_bold auto
-italic_font auto
-bold_italic_font auto
-disable_ligatures never
-font_size 10.0
+font_family         CaskaydiaCove Nerd Font Mono
+font_bold           auto
+italic_font         auto
+bold_italic_font    auto
+
+disable_ligatures    never
+font_size            9.0
+window_padding_width 3
+
+copy_on_select yes
+map kitty_mod+v paste_from_clipboard
+
+#include themes/Rose-Pine.conf
+# background_opacity 0.60
+# hide_window_decorations yes
+# confirm_os_window_close 0
 #: }}}
 
 #: Fonts {{{
