--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -6,7 +6,6 @@
 # Veja https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
-
 # Veja https://wiki.hyprland.org/Configuring/Keywords/ para mais
 
 # Execute seus programas favoritos ao iniciar o Hyprland
@@ -54,10 +53,11 @@ decoration {
     # Veja https://wiki.hyprland.org/Configuring/Variables/ para mais
 
     rounding = 5
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
+    blur {
+        enabled = true
+        size = 3
+        passes = 1
+    }
 
     drop_shadow = yes
     shadow_range = 4
@@ -110,5 +110,5 @@ device:epic-mouse-v1 {
 
 # Carregue um arquivo (configuração por vários arquivos)
 # source = ~/.config/hypr/myColors.conf
+source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/shortcuts.conf
-
