--- a/dotfiles/.config/Code - OSS/User/settings.json
+++ b/dotfiles/.config/Code - OSS/User/settings.json
@@ -5,10 +5,11 @@
     "editor.wordWrap": "on",
     "explorer.compactFolders": false,
     "explorer.confirmDelete": false,
-    "workbench.iconTheme": "vscode-icons",
+    "explorer.confirmDragAndDrop": false,
+    "explorer.incrementalNaming": "disabled",
+    "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
-    "explorer.confirmDragAndDrop": false,
     "terminal.integrated.copyOnSelection": true,
     "vim.cursorStylePerMode.insert": "line",
     "vim.cursorStylePerMode.normal": "block",
@@ -22,4 +23,7 @@
     "vim.leader": "<Space>",
     "vim.useSystemClipboard": true,
     "vim.smartRelativeLine": true,
+    "window.menuBarVisibility": "toggle",
+    "workbench.iconTheme": "vscode-icons",
+    "window.zoomLevel": -1,
 }
