--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ monitor=,preferred,auto,auto
 
 # Execute seus programas favoritos ao iniciar o Hyprland
 # exec-once = waybar & hyprpaper & firefox
-exec-once = kitty & hyprpaper
+exec-once = kitty & hyprpaper & waybar
 
 # Algumas variáveis de ambiente padrão
 env = XCURSOR_SIZE,24
@@ -35,49 +35,6 @@ input {
     }
 
     sensitivity = 0 # -1.0 até 1.0, 0 significa sem alteraçẽs
-}
-
-general {
-    # Veja https://wiki.hyprland.org/Configuring/Variables/ para mais
-
-    gaps_in = 2
-    gaps_out = 5
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    layout = dwindle
-}
-
-decoration {
-    # Veja https://wiki.hyprland.org/Configuring/Variables/ para mais
-
-    rounding = 5
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-    }
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-}
-
-animations {
-    enabled = yes
-
-    # Algumas animações padrão, veja https://wiki.hyprland.org/Configuring/Animations/ para mais
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
 }
 
 dwindle {
@@ -107,8 +64,11 @@ device:epic-mouse-v1 {
 # Exemplo windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # Veja https://wiki.hyprland.org/Configuring/Window-Rules/ para mais
+windowrulev2 = opacity 0.85,class:^(code-oss)$
+windowrulev2 = opacity 0.70,class:^(kitty)$
 
 # Carregue um arquivo (configuração por vários arquivos)
 # source = ~/.config/hypr/myColors.conf
 source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/shortcuts.conf
+source = ~/.config/hypr/theme.conf
