--- a/dotfiles/.config/hypr/shortcuts.conf
+++ b/dotfiles/.config/hypr/shortcuts.conf
@@ -8,6 +8,7 @@ $term = kitty
 $editor = code
 $file = dolphin
 $browser = firefox
+$vault = keepassxc
 
 # ações das janelas/sessões
 bind = $mainMod, Q, killactive # encerra o programa em foco
@@ -25,6 +26,7 @@ bind = $mainMod, T, exec, $term # abre o Kitty
 bind = $mainMod, E, exec, $file # abre do Dolphin
 bind = $mainMod, C, exec, $editor # abre o VS Code
 bind = $mainMod, F, exec, $browser # abre o Firefox
+bind = $mainMod, P, exec, $vault # abre o KeePassXC
 
 # executa scripts personalizados
 # usa o mainMod + Espaço para alterar o layout do teclado
@@ -112,6 +114,8 @@ bind = $mainMod ALT, 7, movetoworkspacesilent, 7
 bind = $mainMod ALT, 8, movetoworkspacesilent, 8
 bind = $mainMod ALT, 9, movetoworkspacesilent, 9
 bind = $mainMod ALT, 0, movetoworkspacesilent, 10
+
+bind = $mainMod, A, exec, pkill -x waybar || waybar
 
 # Rofi is toggled on/off if you repeat the key presses
 # bind = $mainMod, A, exec, pkill -x rofi || rofi # launch desktop applications
