--- a/dotfiles/.config/kitty/kitty.conf
+++ b/dotfiles/.config/kitty/kitty.conf
@@ -1,23 +1,27 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: Configurações Personalizadas {{{
-# Configurações da fonte
+# fonte
 font_family         CaskaydiaCove Nerd Font Mono
 font_bold           auto
 italic_font         auto
 bold_italic_font    auto
+disable_ligatures   never
+font_size           9.0
 
-disable_ligatures    never
-font_size            9.0
+# janela
+hide_window_decorations yes
 window_padding_width 3
 
+# copia e cola
 copy_on_select yes
 map kitty_mod+v paste_from_clipboard
 
-#include themes/Rose-Pine.conf
-# background_opacity 0.60
-# hide_window_decorations yes
-# confirm_os_window_close 0
+# cursor
+cursor_stop_blinking_after 0
+
+# temas para a janela
+# include themes/Catppuccin-Mocha.conf
 #: }}}
 
 #: Fonts {{{
@@ -2409,4 +2413,3 @@ map kitty_mod+v paste_from_clipboard
 #: }}}
 
 #: }}}
-
