--- a/dotfiles/.config/hypr/hyprland.conf
+++ b/dotfiles/.config/hypr/hyprland.conf
@@ -18,8 +18,8 @@ env = XCURSOR_SIZE,24
 # Para todas as categorias, veja https://wiki.hyprland.org/Configuring/Variables/
 input {
     # define dois teclados us, um sem e outro com as teclas mortas (para acentos)
-    kb_layout = us,us
-    kb_variant = ,intl
+    kb_layout = br
+    kb_variant = dvorak
     kb_model =
     kb_options = ctrl:nocaps # troca Caps Lock para Ctrl
     kb_rules =
@@ -64,11 +64,22 @@ device:epic-mouse-v1 {
 # Exemplo windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # Veja https://wiki.hyprland.org/Configuring/Window-Rules/ para mais
+windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 windowrulev2 = opacity 0.85,class:^(code-oss)$
 windowrulev2 = opacity 0.70,class:^(kitty)$
+windowrulev2 = opacity 0.90,class:^(firefox)$
+windowrulev2 = opacity 0.90,class:^(thunar)$
+
+set $gnome-schema org.gnome.desktop.interface
+
+; exec_always {
+;     gsettings set $gnome-schema gtk-theme 'Adwaita Dark'
+;     gsettings set $gnome-schema icon-theme 'Your icon theme'
+;     gsettings set $gnome-schema cursor-theme 'Your cursor Theme'
+;     gsettings set $gnome-schema font-name 'CaskaydiaCode Nerd Font'
+; }
 
 # Carregue um arquivo (configuração por vários arquivos)
-# source = ~/.config/hypr/myColors.conf
 source = ~/.config/hypr/animations.conf
 source = ~/.config/hypr/shortcuts.conf
 source = ~/.config/hypr/theme.conf
