--- a/dotfiles/.config/hypr/shortcuts.conf
+++ b/dotfiles/.config/hypr/shortcuts.conf
@@ -6,7 +6,7 @@ $mainMod = SUPER
 # variáveis
 $term = kitty
 $editor = code
-$file = dolphin
+$file = thunar
 $browser = firefox
 $vault = keepassxc
 
@@ -23,7 +23,7 @@ bind = ALT, RETURN, fullscreen # anterna a janela em foco para tela cheia
 
 # atalhos dos programas
 bind = $mainMod, T, exec, $term # abre o Kitty
-bind = $mainMod, E, exec, $file # abre do Dolphin
+bind = $mainMod, E, exec, $file # abre do Thunar
 bind = $mainMod, C, exec, $editor # abre o VS Code
 bind = $mainMod, F, exec, $browser # abre o Firefox
 bind = $mainMod, P, exec, $vault # abre o KeePassXC
